--- a/public/template/layout.phtml
+++ b/public/template/layout.phtml
@@ -13,21 +13,24 @@
                 <body>
                 <div class="container-fluid">
                     <div class="row d-none d-md-block">
-                        <div class="col-md-12 rot">Kopf</div>
+                        <div class="col-md-12 rot bg-danger">Kopf</div>
                     </div>
-                    <div class="row">
+
+                    <div class="row-md-12">
                         <!-- Navigation -->
-                        <div class="col-md-1 gruen d-none d-md-block">
+                        <div class="col-md-2 gruen d-none d-md-block bg-danger rand_rot">
                             <a href='{{basisUrl}}/erststartArtikelSuche'><button type="button" class="btn btn-success">Auslagern</button></a><br>
                             <a href='{{basisUrl}}/eingabemaske'><button type="button" class="btn btn-success">Einlagern</button></a><br>
                             <a href='{{basisUrl}}/kundensucheErststart'><button type="button" class="btn btn-success">Kundensuche</button></a><br>
                             <a href='{{basisUrl}}/buchTitelSucheStart'><button type="button" class="btn btn-success">Buchtitelsuche</button></a><br>
                         </div>
                         <!-- Content -->
-                        <div class="col-md-11 rand_rot"><!--{{include('content.phtml')}}--></div>
+                        <div class="col-md-10 rand_rot">{{include('content.phtml')}}</div>
                     </div>
+
                     <div class="row d-none d-md-block">
-                    <div class="col-xd-12 rot">Fuss</div>
+                        <div class="col-md-12 rot bg-danger">Fuss</div>
+                    </div>
                 </div>
             </div>
         </body>
