--- a/public/template/layout.phtml
+++ b/public/template/layout.phtml
@@ -1,11 +1,10 @@
-<!-- Bootstrap 4 Tutorial von www.bootstrapworld.de -->
-<!-- ============================================== -->
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>WarenwirtschaftNG</title>
     <!-- Bootstrap CSS laden -->
     <link rel="stylesheet" href="source/bootstrap-4.0.0/css/bootstrap.min.css" />
 
