[ng-348]: Bootstrap Layout anfertigen

--- a/public/template/layout.phtml
+++ b/public/template/layout.phtml
@@ -11,6 +11,9 @@
     <!-- eigene CSS - Datei -->
     <link rel="stylesheet" href="css/projekt.css" />
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -20,25 +23,25 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand text-light" href="#">WarenwirtschaftNG</a>
+        <a class="navbar-brand font-30px text-light font offset-1" href="#">WarenwirtschaftNG</a>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto offset-5">
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="#">Einlagern</a>
+                    <a class="nav-link text-light font" href="#">Einlagern</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Kundensuche</a>
+                    <a class="nav-link text-light font" href="#">Kundensuche</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Platzhalter</a>
+                    <a class="nav-link text-light font" href="#">Platzhalter</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <div class="row">
-        <div class="col-md-12 col-12 border_green bg-dark text-light">
-            <span class="navbar-text">
+        <div class="col-md-12 col-12 bg-dark text-light">
+            <span class="navbar-text font offset-10">
                 &copy; WarenwirtschaftNG
             </span>
         </div>
