[ng-348]: Bootstrap Layout anfertigen

--- a/public/template/layout.phtml
+++ b/public/template/layout.phtml
@@ -25,12 +25,15 @@
         </button>
         <a class="navbar-brand font-30px text-light font offset-1" href="#">WarenwirtschaftNG</a>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto offset-5">
+            <ul class="navbar-nav mr-auto offset-4">
                 <li class="nav-item active">
                     <a class="nav-link text-light font" href="#">Einlagern</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light font" href="#">Kundensuche</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light font" href="#">Platzhalter</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light font" href="#">Platzhalter</a>
