--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -314,13 +314,10 @@
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
-
         <!-- Page Heading -->
         <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
-
-      </div>
+        {% include 'contentBookInput.phtml' %}
       <!-- /.container-fluid -->
-
     </div>
     <!-- End of Main Content -->
 
