[ng-348]: navigation zur eingabemaske eingefügt

--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -12,13 +12,13 @@
   <title>Warenwirtschaftssystem NG</title>
 
   <!-- Custom fonts for this template-->
-  <link href=",,/../public/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../../public/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="../css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -91,7 +91,7 @@
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <!-- weitere Module der Administration -->
-          <a class="collapse-item active" href="blank.html">Modul 1</a>
+          <a class="collapse-item active" href="{{basisUrl}}/eingabemaske">Eingabemaske</a>
         </div>
       </div>
     </li>
