--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -36,7 +36,7 @@
         <div class="col-sm-6">
             <!-- Titel bekannt -->
             {% if block1 %}
-            <div class="col-lg-6" style="height: 500px"><p>Das Buch: {$bookData[0]['title']} wurde in den Bestand aufgenommen</p></div>
+            <div class="col-lg-6" style="height: 500px"><p>Das Buch: {{title}} wurde in den Bestand aufgenommen</p></div>
             {% endif %}
 
             <!-- wenn Titel unbekannt -->
