--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -12,13 +12,13 @@
   <title>Warenwirtschaftssystem NG</title>
 
   <!-- Custom fonts for this template-->
-  <link href=",,/../public/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../../public/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="../css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -90,8 +90,9 @@
       <div id="collapsePages" class="collapse show" aria-labelledby="headingPages"
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-          <!-- weitere Module der Administration -->
-          <a class="collapse-item active" href="blank.html">Modul 1</a>
+          <!--  Aufruf BuchTitelSucheStart -->
+          <a class="collapse-item active" href="{{basisUrl}}/eingabemaske">Eingabemaske</a>
+          <a class="collapse-item active" href="{{basisUrl}}/buchTitelSucheStart">Buchtitelsuche</a>
         </div>
       </div>
     </li>
@@ -282,7 +283,7 @@
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="mr-2 d-none d-lg-inline text-gray-600 small">Mediengruppe</span>
               <img class="img-profile rounded-circle"
-                   src="../img/undraw_profile.svg">
+                   src="../public/img/undraw_profile.svg">
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -316,7 +317,8 @@
       <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+        <h1 class="h3 mb-4 text-gray-800">{{ModulName}}</h1>
+        {% include templatename ~ '.phtml' %}
 
       </div>
       <!-- /.container-fluid -->
