--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -1,38 +1,51 @@
 <div class ="container">
     <div class="row">
         <div class="col-sm-6">
-            <form action="{{basisUrl}}/eingeben" method="POST">
-                <div class="form-inline">
-                    <label>ISBN : </label>
-                    <input type="text" name="ISBN" class="m-5 form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
+
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">{{ModulName}}</h4>
                 </div>
-                <div class="form-inline">
-                    <label>Bereich : </label>
-                    <select class="m-2 form-control" name="bereich" id="exampleFormControlSelect1">
-                        {% for i in range(1, 4) %}
-                        <option>{{i}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Box : </label>
-                    <select class="m-2 form-control" name="box" id="exampleFormControlSelect1">
-                        {% for i in range(1, 30) %}
-                        <option>{{i}}</option>
-                        {% endfor %}
-                    </select>
+                <div class="card-body">
+                    <form action="{{basisUrl}}/eingeben" method="POST">
+                        <div class="form-inline">
+                            <label>ISBN : </label>
+                            <input type="text" name="ISBN" class="m-5 form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
+                        </div>
+                        <div class="form-inline">
+                            <label>Bereich : </label>
+                            <select class="m-2 form-control" name="bereich" id="exampleFormControlSelect1">
+                                {% for i in range(1, 4) %}
+                                <option>{{i}}</option>
+                                {% endfor %}
+                            </select>
+                            <label>Box : </label>
+                            <select class="m-2 form-control" name="box" id="exampleFormControlSelect1">
+                                {% for i in range(1, 30) %}
+                                <option>{{i}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-inline">
+                            <label>Zustand des Buches : </label>
+                            <select class="m-2 form-control" name="zustand" id="exampleFormControlSelect1">
+                                <option>gut</option>
+                                <option>genuegend</option>
+                                <option>schlecht</option>
+                            </select>
+                            <button type="submit" class="m-5 btn btn-primary">Abschicken</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-inline">
-                    <label>Zustand des Buches : </label>
-                    <select class="m-2 form-control" name="zustand" id="exampleFormControlSelect1">
-                        <option>gut</option>
-                        <option>genuegend</option>
-                        <option>schlecht</option>
-                    </select>
-                    <button type="submit" class="m-5 btn btn-primary">Abschicken</button>
+                <div class="card-footer">
+                    &nbsp;
                 </div>
-            </form>
+            </div>
+
+
+
+
         </div>
-
-
         <div class="col-sm-6">
             <!-- Titel bekannt -->
             {% if block1 %}
