--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -49,28 +49,60 @@
         <div class="col-sm-6">
             <!-- Titel bekannt -->
             {% if block1 %}
-            <div class="col-lg-6" style="height: 500px"><p>Das Buch: {{title}} wurde in den Bestand aufgenommen</p></div>
+                <div class="card">
+                    <div class="card-header bg-success">
+                        <h4>Erfolgreich</h4>
+                    </div>
+                    <div class="card-body">
+
+                        <div class="col-lg-6" style="height: 500px"><p>Das Buch: {{title}} wurde in den Bestand aufgenommen</p></div>
+
+                    </div>
+                    <div class="card-footer">
+                        &nbsp;
+                    </div>
+                </div>
             {% endif %}
 
             <!-- wenn Titel unbekannt -->
             {% if block2 %}
-            <div class="col-lg-offset-6 col-lg-6">
-                <form action="{basisUrl}/einpflegen" method="POST">
-                    <div class="form-inline">
-                        <label  class="ml-4 mr-sm-2">ISBN : </label><input name="isbn" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="ISBN">
-                        <label  class="ml-4 mr-sm-2">Titel : </label><input name="title" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="Titel">
+                <div class="card">
+                    <div class="card-header bg-danger">
+                        <h4>Metadaten des Buches eingeben</h4>
                     </div>
-                    <div class="form-inline">
-                        <label  class="ml-3 mr-sm-2">Verlag : </label><input name="verlag" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="Verlag">
-                        <button type="submit" class="ml-4 btn btn-primary">Hinzufügen</button>
+                    <div class="card-body">
+                        <div class="col-lg-offset-6 col-lg-6">
+                            <form action="{{basisUrl}}/einpflegen" method="POST">
+                                <div class="form-inline">
+                                    <label  class="ml-4 mr-sm-2">ISBN : </label><input name="ISBN" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="ISBN">
+                                    <label  class="ml-4 mr-sm-2">Titel : </label><input name="title" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="Titel">
+                                </div>
+                                <div class="form-inline">
+                                    <label  class="ml-3 mr-sm-2">Verlag : </label><input name="verlag" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="Verlag">
+                                    <button type="submit" class="ml-4 btn btn-primary">Hinzufügen</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                </form>
-            </div>
+                    <div class="card-footer">
+                        &nbsp;
+                    </div>
+                </div>
             {% endif %}
 
             <!-- Stammdaten Erweiterung erfolgreich -->
             {% if block3 %}
-            <div class="col-lg-6" style="height: 500px"><p>Die Stammdaten wurden erweitert</p></div>
+                <div class="card">
+                    <div class="card-header bg-success">
+                        <h4>Erfolgreich</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="col-lg-6" style="height: 500px"><p>Die Stammdaten wurden erweitert</p></div>
+                    </div>
+                    <div class="card-footer">
+                        &nbsp;
+                    </div>
+                </div>
             {% endif %}
         </div>
     </div>
