[ng-348]: Template Kundensuche ergänzt

--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -92,6 +92,7 @@
         <div class="bg-white py-2 collapse-inner rounded">
           <!-- weitere Module der Administration -->
           <a class="collapse-item active" href="{{basisUrl}}/eingabemaske">Einlagern</a>
+          <a class="collapse-item active" href="{{basisUrl}}/kundensucheErststart">Kundensuche</a>
         </div>
       </div>
     </li>
