--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -1,7 +1,6 @@
 <div class ="container">
     <div class="row">
         <div class="col-sm-6">
-
             <div class="card">
                 <div class="card-header">
                     <h4 class="card-title">{{ModulName}}</h4>
@@ -54,11 +53,9 @@
                         <h4>Erfolgreich</h4>
                     </div>
                     <div class="card-body">
-
                         <div class="col-lg-6" style="height: 500px"><p>Das Buch: {{title}} wurde in den Bestand aufgenommen</p></div>
-
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer bg-success">&nbsp;
                         &nbsp;
                     </div>
                 </div>
@@ -84,7 +81,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer bg-danger">
                         &nbsp;
                     </div>
                 </div>
@@ -99,7 +96,7 @@
                     <div class="card-body">
                         <div class="col-lg-6" style="height: 500px"><p>Die Stammdaten wurden erweitert</p></div>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer bg-success">
                         &nbsp;
                     </div>
                 </div>
