[ng-348]: Template Kundensuche ergänzt

--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -31,7 +31,7 @@
   <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{basisUrl}}">
       <div class="sidebar-brand-icon rotate-n-15">
         <i class="fas fa-laugh-wink"></i>
       </div>
@@ -53,7 +53,7 @@
 
     <!-- Heading -->
     <div class="sidebar-heading">
-        Reporting Module
+      Reporting Module
     </div>
 
     <!-- Administration Module - Pages Collapse Menu -->
@@ -82,17 +82,19 @@
 
     <!-- Administration Module - Pages Collapse Menu -->
     <li class="nav-item active">
-      <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
-         aria-controls="collapsePages">
+      <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages1" aria-expanded="true"
+         aria-controls="collapsePages1">
         <i class="fas fa-fw fa-folder"></i>
         <span>Module</span>
       </a>
-      <div id="collapsePages" class="collapse show" aria-labelledby="headingPages"
+      <div id="collapsePages1" class="collapse show" aria-labelledby="headingPages"
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-          <!-- weitere Module der Administration -->
+          <!--  Aufruf BuchTitelSucheStart -->
           <a class="collapse-item active" href="{{basisUrl}}/eingabemaske">Einlagern</a>
           <a class="collapse-item active" href="{{basisUrl}}/kundensucheErststart">Kundensuche</a>
+          <a class="collapse-item active" href="{{basisUrl}}/buchTitelSucheStart">Buchtitelsuche</a>
+          <a class="collapse-item active" href="{{basisUrl}}/erststartArtikelSuche">ISBN Suche</a>
         </div>
       </div>
     </li>
@@ -225,7 +227,7 @@
               </h6>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="../img/undraw_profile_1.svg"
+                  <img class="rounded-circle" src="/public/img/undraw_profile_1.svg"
                        alt="...">
                   <div class="status-indicator bg-success"></div>
                 </div>
@@ -237,7 +239,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="../img/undraw_profile_2.svg"
+                  <img class="rounded-circle" src="../public/img/undraw_profile_2.svg"
                        alt="...">
                   <div class="status-indicator"></div>
                 </div>
@@ -249,7 +251,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="../img/undraw_profile_3.svg"
+                  <img class="rounded-circle" src="../public/img/undraw_profile_3.svg"
                        alt="...">
                   <div class="status-indicator bg-warning"></div>
                 </div>
@@ -315,9 +317,13 @@
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
+
         <!-- Page Heading -->
         {% include templatename ~ '.phtml' %}
+
+      </div>
       <!-- /.container-fluid -->
+
     </div>
     <!-- End of Main Content -->
 
