--- a/public/template/contentCustomerSearch.phtml
+++ b/public/template/contentCustomerSearch.phtml
@@ -1,7 +1,7 @@
-<div class ="container">
+<div class ="container ">
     <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
+        <div class="col-sm-6 mx-auto">
+            <div class="card ">
                 <div class="card-header">
                     <h4 class="card-title">{{ModulName}}</h4>
                 </div>
@@ -21,7 +21,7 @@
 
 
         {% if block1 %}
-            <div class="col-sm-6 mb-4">
+            <div class="col-sm-auto mb-4 mx-auto">
             <!-- Kunde unbekannt -->
                 <div class="card">
                     <div class="card-header bg-danger">
@@ -38,7 +38,7 @@
         {% endif %}
 
         {% if block2 %}
-            <div class="col-sm-auto mt-4 mb-4">
+            <div class="col-sm-auto mt-4 mb-4 mx-auto">
             <!-- Datensätze gefunden -->
                 <div class="card">
                     <div class="card-header bg-success">
