--- a/public/template/leer.phtml
+++ b/public/template/leer.phtml
@@ -1,2 +1,15 @@
-<h3>Start des Warenwirtschaftssystem</h3>
+<div class="card col-sm-3 mx-auto">
+    <div class="card-header text-center">
+        <h4>Start des Warenwirtschaftssystem</h4>
+    </div>
+    <div class="card-body mx-auto">
+        <img class="img-profile"
+             src="https://www.nurgutebuecher.de/out/media_rte/stein_logo.jpg">
+    </div>
+    <div class="card-footer">
+        &nbsp;
+    </div>
+</div>
+
+
 
