--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -1,7 +1,7 @@
 <div class ="container">
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
+
+        <div class="col-sm-6 mx-auto">
+            <div class="card ">
                 <div class="card-header">
                     <h4 class="card-title">{{ModulName}}</h4>
                 </div>
@@ -45,7 +45,7 @@
 
 
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mx-auto mt-4 mb-4">
             <!-- Titel bekannt -->
             {% if block1 %}
                 <div class="card">
@@ -63,8 +63,8 @@
 
             <!-- wenn Titel unbekannt -->
             {% if block2 %}
-                <div class="card">
-                    <div class="card-header bg-danger">
+                <div class="card mx-auto mt-4 mb-4">
+                    <div class="card-header bg-danger ">
                         <h4>Metadaten des Buches eingeben</h4>
                     </div>
                     <div class="card-body">
@@ -89,7 +89,7 @@
 
             <!-- Stammdaten Erweiterung erfolgreich -->
             {% if block3 %}
-                <div class="card">
+                <div class="card mx-auto mt-4 mb-4">
                     <div class="card-header bg-success">
                         <h4>Erfolgreich</h4>
                     </div>
@@ -102,5 +102,5 @@
                 </div>
             {% endif %}
         </div>
-    </div>
+
 </div>
