--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -1,4 +1,4 @@
-<div class ="container">
+<div class ="container" >
 
         <div class="col-sm-6 mx-auto">
             <div class="card ">
@@ -7,33 +7,32 @@
                 </div>
                 <div class="card-body">
                     <form action="{{basisUrl}}/eingeben" method="POST">
-                        <div class="form-inline">
-                            <label>ISBN : </label>
-                            <input type="text" name="ISBN" class="m-5 form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
+                        <div class="mt-3 form-inline">
+                            <input type="text" name="ISBN" class="form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
                         </div>
-                        <div class="form-inline">
+                        <div class="mt-3 form-inline">
                             <label>Bereich : </label>
-                            <select class="m-2 form-control" name="bereich" id="exampleFormControlSelect1">
+                            <select class="ml-2 form-control" name="bereich" id="exampleFormControlSelect1">
                                 {% for i in range(1, 4) %}
                                 <option>{{i}}</option>
                                 {% endfor %}
                             </select>
-                            <label>Box : </label>
-                            <select class="m-2 form-control" name="box" id="exampleFormControlSelect1">
+                            <label class="ml-4">Box : </label>
+                            <select class="ml-2 form-control" name="box" id="exampleFormControlSelect1">
                                 {% for i in range(1, 30) %}
                                 <option>{{i}}</option>
                                 {% endfor %}
                             </select>
                         </div>
-                        <div class="form-inline">
+                        <div class="mt-3 form-inline">
                             <label>Zustand des Buches : </label>
-                            <select class="m-2 form-control" name="zustand" id="exampleFormControlSelect1">
+                            <select class="ml-2 form-control" name="zustand" id="exampleFormControlSelect1">
                                 <option>gut</option>
                                 <option>genuegend</option>
                                 <option>schlecht</option>
                             </select>
-                            <button type="submit" class="m-5 btn btn-primary">Abschicken</button>
                         </div>
+                        <button type="submit" class="btn btn-primary mt-3 mb-3">Abschicken</button>
                     </form>
                 </div>
                 <div class="card-footer">
