--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -1,34 +1,51 @@
 <div class ="container">
     <div class="row">
         <div class="col-sm-6">
-            <form action="localhost/praktikum/warenwirtschaft/public/eingeben" method="POST">
-                <div class="form-inline">
-                    <label>ISBN : </label>
-                    <input type="text" name="isbn" class="m-5 form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
-                </div>
-                <div class="form-inline">
-                    <label>Bereich : </label>
-                    <select class="m-2 form-control" name="bereich" id="exampleFormControlSelect1">
-                        {for $i = 1; $i <= 4; $i++}
-                            <option>{$i}</option>
-                        {/for}
-                    </select>
-                    <label>Box : </label>
-                    <select class="m-2 form-control" name="box" id="exampleFormControlSelect1">
-                        {for $i = 1; $i <= 30; $i++}
-                            <option>{$i}</option>
-                        {/for}
-                    </select>
 
-                    <label>Zustand des Buches : </label>
-                    <select class="m-2 form-control" name="zustand" id="exampleFormControlSelect1">
-                        <option>gut</option>
-                        <option>genuegend</option>
-                        <option>schlecht</option>
-                    </select>
-                    <button type="submit" class="m-5 btn btn-primary">Abschicken</button>
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Lagerbestand</h4>
+                    <h5 class="card-subtitle">Bitte ISBN eingeben</h5>
                 </div>
-            </form>
+                <div class="card-body">
+                    <form action="{{basisUrl}}/eingeben" method="POST">
+                        <div class="form-inline">
+                            <label>ISBN : </label>
+                            <input type="text" name="isbn" class="m-5 form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
+                        </div>
+                        <div class="form-inline">
+                            <label>Bereich : </label>
+                            <select class="m-2 form-control" name="bereich" id="exampleFormControlSelect1">
+                                [{for $i = 1; $i <= 4; $i++}}
+                                <option>{$i}</option>
+                                {/for}}
+                            </select>
+                            <label>Box : </label>
+                            <select class="m-2 form-control" name="box" id="exampleFormControlSelect1">
+                                {for $i = 1; $i <= 30; $i++}
+                                <option>{$i}</option>
+                                {/for}
+                            </select>
+
+                            <label>Zustand des Buches : </label>
+                            <select class="m-2 form-control" name="zustand" id="exampleFormControlSelect1">
+                                <option>gut</option>
+                                <option>genuegend</option>
+                                <option>schlecht</option>
+                            </select>
+                            <button type="submit" class="m-5 btn btn-primary">Abschicken</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="card-footer">
+                    &nbsp
+                </div>
+
+            </div>
+
+
+
+
         </div>
         <div class="col-sm-6">
             <!-- Titel bekannt -->
