--- a/public/template/pitchInfo.phtml
+++ b/public/template/pitchInfo.phtml
@@ -1,46 +1,72 @@
 <!-- Formular -->
-<div class="col-md-6">
-    <form action="{$basisUrl}/abrufen" method="POST">
-        <div class="form-group">
-            <label>ISBN : </label>
-            <input type="text" class="form-control" name="isbn" id="isbn" placeholder="9783411720156" required pattern="[0-9]{10,13}">
+<div class="col-md-10">
+    <div class="card">
+        <div class="card-header">
+        <h4 class="card-title">Suche nach ISBN</h4>
         </div>
-        <button type="submit" class="btn btn-primary">abfragen Lagerbestand</button>
-    </form>
+        <div class="card-body">
+        <form action="{{basisUrl}}/abrufen" method="POST">
+            <div class="form-group">
+                <label>&nbsp </label>
+                <input type="text" class="form-control" name="isbn" id="isbn" placeholder="z.B.: 9783411720156" required >
+            </div>
+            <button type="submit" class="btn btn-primary">abfragen Lagerbestand</button>
+        </form>
+        </div>
+        <div class="card-footer">&nbsp</div>
+    </div>
 </div>
 <!-- Bloecke -->
-<div class="col-md-6">
+<div class="col-md-10">
 
     <!-- nicht gefunden -->
-    {block1 $block1}
-    <div class="col-md-12">
-        Artikel nicht gefunden
+
+    {% if block1 %}
+    <div class="card">
+        <div class="card-header">
+            <h4 class="card-title">Lagerbestand</h4>
+            <h5 class="card-subtitle">&nbsp</h5>
+        </div>
+        <div class="card-body">
+            <div class="col-md-12">
+                Artikel nicht gefunden
+            </div>
+        </div>
+        <div class="card-footer" style="background-color: #4e73df">&nbsp</div>
     </div>
-    {/block1 $block1}
+    {% endif %}
 
     <!-- gefunden -->
-    {block2 $block2}
-    <div class="col-md-12">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr>
-                    <th>Bereich</th>
-                    <th>Box</th>
-                    <th>Titel</th>
-                </tr>
-                </thead>
-                <tbody>
-                {foreach $articleData as $key => $value}
-                <tr>
-                    <td>{$value['bereich']}</td>
-                    <td>{$value['box']}</td>
-                    <td>{$value['title']}</td>
-                </tr>
-                {/foreach}
-                </tbody>
-            </table>
+    {% if block2 %}
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Lagerbestand</h4>
+            </div>
+            <div class="card-body">
+                <div class="col-md-12">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <th>Bereich</th>
+                                <th>Box</th>
+                                <th>Titel</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for article in articleData %}
+                            <tr>
+                                <td>{{article.bereich}}</td>
+                                <td>{{article.box}}</td>
+                                <td>{{article.title}}</td>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="background-color: #4e73df">&nbsp</div>
         </div>
-    </div>
-    {/block2 $block2}
+    {% endif %}
 </div>
