--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -91,10 +91,10 @@
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <!--  Aufruf BuchTitelSucheStart -->
-          <a class="collapse-item active" href="{{basisUrl}}/eingabemaske">Einlagern</a>
-          <a class="collapse-item active" href="{{basisUrl}}/kundensucheErststart">Kundensuche</a>
-          <a class="collapse-item active" href="{{basisUrl}}/buchTitelSucheStart">Buchtitelsuche</a>
-          <a class="collapse-item active" href="{{basisUrl}}/erststartArtikelSuche">ISBN Suche</a>
+          <a class="collapse-item active" href="{{basisUrl}}eingabemaske">Einlagern</a>
+          <a class="collapse-item active" href="{{basisUrl}}kundensucheErststart">Kundensuche</a>
+          <a class="collapse-item active" href="{{basisUrl}}buchTitelSucheStart">Buchtitelsuche</a>
+          <a class="collapse-item active" href="{{basisUrl}}erststartArtikelSuche">ISBN Suche</a>
         </div>
       </div>
     </li>
