--- a/public/template/contentMockaroo.phtml
+++ b/public/template/contentMockaroo.phtml
@@ -3,7 +3,7 @@
         <div class="col-sm-6 mx-auto">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Mockaroo Export</h4>
+                    <h4 class="card-title">Kundendaten Export</h4>
                 </div>
                 <div class="card-body">
                     <table class="table table-striped table-bordered table-hover">
@@ -16,7 +16,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for item in mockarooOutputData %}
+                            {% for item in outputData %}
                             <tr>
                                 <td>{{item.id}}</td>
                                 <td>{{item.first_name}}</td>
