[develop]: [ng-389]: Anpassen der Namen

--- a/public/template/bootstrap.html
+++ b/public/template/bootstrap.html
@@ -67,7 +67,7 @@
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <!-- weitere Module der Administration -->
-          <a class="collapse-item active" href="{{basisUrl}}mockarooRequest">Kundendatenabfrage</a>
+          <a class="collapse-item active" href="{{basisUrl}}kundendatenabfrage">Kundendatenabfrage</a>
         </div>
       </div>
     </li>
