--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Map: Layout</title>
+        <title>Baumkataster</title>
 
         <meta charset="utf-8" />
 
